1. 修改为监听多个channel 2. 记录消息是，channel信息从原来的hard-code 改为 正确的是channel 3. 去掉了 PING/PONG 消息的打印

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,5 @@
 ### set log levels ###
-log4j.rootLogger = DEBUG,Console,File
-?
+log4j.rootLogger = Console,File
 ###  Console output  ###
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.Target=System.out
@@ -9,7 +8,7 @@ log4j.appender.Console.layout.ConversionPattern=[%d{yy/MM/dd HH:mm:ss:SSS}]-%c\:
 
 ### File output ###
 log4j.appender.File=org.apache.log4j.RollingFileAppender
-log4j.appender.File.File=${project}/app.log
+log4j.appender.File.File=/console.log
 log4j.appender.File.MaxFileSize=10MB
 log4j.appender.File.Threshold=ALL
 log4j.appender.File.layout=org.apache.log4j.PatternLayout
