--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -8,7 +8,7 @@ log4j.appender.Console.layout.ConversionPattern=[%d{yy/MM/dd HH:mm:ss:SSS}]-%c\:
 
 ### File output ###
 log4j.appender.File=org.apache.log4j.RollingFileAppender
-log4j.appender.File.File=/console.log
+log4j.appender.File.File=./console.log
 log4j.appender.File.MaxFileSize=10MB
 log4j.appender.File.Threshold=ALL
 log4j.appender.File.layout=org.apache.log4j.PatternLayout
