Update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@
 #=======================================================================================================================
 # 编译后的class文件,忽略所有以[.class]结尾的文件
 *.class
-
+*.vscode/
 # 日志文件,忽略所有以[.log]结尾的文件.
 *.log
 
